--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,9 @@ S3method(print,DR)
 S3method(print,dTarget)
 S3method(print,pNode)
 export(DR)
-export(add)
 export(dTarget)
 export(oAttack)
+export(oAttackDrug)
 export(oCheckParallel)
 export(oColormap)
 export(oCombineNet)
@@ -36,6 +36,7 @@ export(oSubneterGenes)
 export(oSymbol2GeneID)
 export(oTB2IG)
 export(oUpsetAdv)
+export(oVisDrugAtt)
 export(oVisEvidence)
 export(oVisEvidenceAdv)
 export(pNode)
